# JARVIS

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: config.py  main.py
backend/api/: chat.py  neurons.py  server.py
backend/core/: neuron.py  orchestrator.py
backend/neurons/hello/: config.yaml
backend/neurons/translator/: config.yaml
config/: settings.py
config/prompts/: jarvis_personality.md
core/: __init__.py  conversation.py  orchestrator.py  router.py  state.py
frontend/: index.html
frontend/css/: jarvis-extra.css  jarvis.css
frontend/js/: animations.js  app.js  commands.js  molecule.js  neurons.config.js  openclaw.js  render.js  state.js  voice.js  websocket.js
interfaces/: __init__.py
interfaces/api/: __init__.py  server.py
interfaces/api/routes/: chat.py  memory.py  tools.py
interfaces/cli/: __init__.py  terminal.py
interfaces/web/css/: jarvis.css
interfaces/web/js/: animations.js  app.js  websocket.js
memory/: __init__.py  episodic.py  long_term.py  manager.py  short_term.py
models/: __init__.py  provider.py  schemas.py
tools/: __init__.py  base.py  openclaw_chat.py  openclaw_probe.py  registry.py
tools/datetime_tool/: __init__.py  datetime_tool.py
tools/system_monitor/: __init__.py  monitor.py
utils/: __init__.py  helpers.py  logger.py
