[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "0.1.0"
description = "JARVIS — Personal AI Agent inspired by Iron Man's AI assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "DBH"},
]

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # LLM
    "litellm>=1.50.0",
    
    # Memory
    "chromadb>=0.5.0",
    "aiosqlite>=0.20.0",
    
    # Tools
    "psutil>=6.0.0",
    "httpx>=0.27.0",
    
    # CLI
    "rich>=13.9.0",
    "click>=8.1.0",
    
    # Utils
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
voice = [
    "pvporcupine>=3.0.0",
    "openai-whisper>=20231117",
    "edge-tts>=6.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
jarvis = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "config*", "memory*", "models*", "interfaces*", "tools*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
